# GINParse_ye

./: CMakeLists.txt  README.md  main.c
src/: app_interface.c  app_interface.h  mid_parse.c
