CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(GINParse)

SET(CMAKE_CXX_STANDARD 14)
add_definitions(-w)

SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE Release)

set(CMAKE_EXE_LINKER_FLAGS -static)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH             ${PROJECT_SOURCE_DIR}/lib)
SET(OUT_LIB_PATH                    ${PROJECT_SOURCE_DIR}/lib)

SET(HEAD_PATH_SRC        ${PROJECT_SOURCE_DIR}/src)
FILE(GLOB SOURCE_PATH    ${PROJECT_SOURCE_DIR}/src/*.c)

add_executable(GINParse main.c ${SOURCE_PATH})
